pre-hione-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    field.cattle.io/publicEndpoints: '[{"addresses":["172.16.70.205"],"port":443,"protocol":"HTTPS","serviceName":"ytj-system:hione-master-svc","ingressName":"ytj-system:hione-master-ing","hostname":"hione.yangtuojia.com","path":"/","allNodes":false}]'
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{},"labels":{"app":"hione-master"},"name":"hione-master-ing","namespace":"ytj-system"},"spec":{"rules":[{"host":"hione.yangtuojia.com","http":{"paths":[{"backend":{"serviceName":"hione-master-svc","servicePort":80},"path":"/"}]}}],"tls":[{"hosts":["hione.yangtuojia.com"],"secretName":"yangtuojia-ingress-secret"}]}}
  creationTimestamp: "2019-12-09T09:43:30Z"
  generation: 6
  labels:
    app: hione-master
  name: hione-master-ing
  namespace: ytj-system
  resourceVersion: "100062715"
  selfLink: /apis/extensions/v1beta1/namespaces/ytj-system/ingresses/hione-master-ing
  uid: 5b628183-1a68-11ea-ad58-00163e0f50c1
spec:
  rules:
  - host: hione.yangtuojia.com
    http:
      paths:
      - backend:
          serviceName: hione-master-svc
          servicePort: 80
        path: /
  tls:
  - hosts:
    - hione.yangtuojia.com
    secretName: yangtuojia-ingress-secret
status:
  loadBalancer:
    ingress:
    - ip: 172.16.70.205
